# jetsonfabric

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile.agent  LICENSE  Makefile  README.md  docker-compose.control.yml  docker-compose.node.yml  go.mod  pyproject.toml
.github/workflows/: ci.yml
cmd/jetsonfabric-agent/: main.go  main_test.go
cmd/jetsonfabric-bench/: main.go  main_test.go
cmd/jetsonfabric-control/: main.go  main_test.go
cmd/jetsonfabric-node/: main.go
cmd/jetsonmesh-agent/: main.go
cmd/jetsonmesh-control/: main.go
configs/: README.md  model-artifacts.example.json  models.example.json
docker/: Dockerfile.agent  Dockerfile.control  Dockerfile.runtime
docs/: README.md  agent-join.md  architecture-diagrams.md  architecture.md  build.md  deployment-invariants.md  deployment-standards.md  desktop-multi-agent.md  distributed-inference-state-machine.md  engineering-standards.md  knowledge-base-boundary.md  llama-cpp-partial-layer.md  local-development.md  node-join.md  p0-layer-split-mvp.md  p0-single-jetson.md  p1-tensor-parallelism.md  p2-operational-fabric.md  phase1-colocated-validation.md  physical-jetson-validation.md  poc-single-node-serving.md  project-context.md  roadmap.md  runtime-single-node-prep.md  runtime-stage-interface.md  single-node-runtime-validation.md  stagewire-v1.md  testing-strategy.md
docs/architecture/: mdns-discovery.md  node-discovery-control-plane.md  node-fabric-workflow.md
docs/diagrams/: README.md
examples/: README.md  chat-request.json  deployment-switch-request.json
examples/poc-local-smoke/: chat-request.json
internal/agent/: client.go  server.go  server_test.go
internal/api/: paths.go  url.go  url_test.go
internal/benchmarks/: recorder.go
internal/chat/: types.go
internal/cluster/: types.go
internal/clusterplan/: deployment.go  deployment_builder.go  deployment_builder_test.go  deployment_test.go  edge_cases_test.go  pipeline.go  pipeline_test.go  plan.go  plan_test.go  validation.go
internal/config/: defaults.go
internal/control/: errors.go  handlers_chat.go  handlers_health.go  handlers_layersplit.go  handlers_models.go  handlers_nodes.go  json.go  route_metadata.go  routing.go  server.go  server_test.go
internal/coordinator/: deployment_intent.go  deployment_partial_failure_integration_test.go  deployment_residency_test.go  deployment_state.go  deployment_switch_integration_test.go  errors.go  handlers_chat.go  handlers_chat_completions.go  handlers_chat_completions_test.go  handlers_chat_generation.go  handlers_deployments.go  handlers_health.go  handlers_layersplit.go  handlers_layersplit_run.go  handlers_layersplit_run_test.go  handlers_layersplit_single_test.go  handlers_models.go  handlers_models_pipeline_test.go  handlers_nodes.go  handlers_route_preview_test.go  json.go  reconciler.go  reconciler_integration_test.go  route_metadata.go  routing.go  runtime_identity.go  runtime_identity_test.go  server.go
internal/discovery/: announce.go  announce_test.go  discovery.go  hydrating.go  hydrating_test.go  mdns.go  mdns_test.go  multi.go  static.go  static_test.go
internal/election/: election.go  election_test.go
internal/facade/: router.go  router_test.go
internal/inference/: inference.go  inference_test.go
internal/layersplit/: http_transport.go  local_transport.go  planner.go  planner_test.go  transport.go  transport_test.go
internal/membership/: member.go  member_test.go  store.go  store_test.go
internal/modelartifacts/: catalog.go  catalog_test.go  hash.go
internal/modelregistry/: registry.go  registry_test.go
internal/node/: advertise.go  app.go  config.go  config_test.go  identity.go  member_capabilities.go  model_identity.go  model_identity_test.go  roles.go  roles_test.go  runtime_supervisor.go
internal/routing/: preview.go  preview_test.go
internal/runtimebridge/: chat.go  chat_test.go  deployment.go  deployment_client.go  deployment_client_test.go  deployment_test.go  generation.go  generation_test.go  stage.go  stage_test.go  (+1 more)
runtime/: CMakeLists.txt  README.md
runtime/adapters/: llama_cpp_adapter.cpp  llama_cpp_adapter.hpp  llama_cpp_model.cpp  llama_cpp_model.hpp  llama_cpp_stage_adapter.cpp  llama_cpp_stage_adapter.hpp  llama_cpp_stage_adapter_test.cpp
runtime/api/: http_response.cpp  http_response.hpp  http_server.cpp  http_server.hpp
runtime/deployment/: deployment.hpp  lifecycle_test.cpp  model_manager.hpp  model_manager_test.cpp
runtime/engine/: engine.hpp  inference_engine_factory.cpp  inference_engine_factory.hpp  runtime_engine.cpp  runtime_engine.hpp  runtime_engine_factory.cpp  runtime_engine_factory.hpp  runtime_service.cpp  runtime_service.hpp  stub_engine.cpp  stub_engine.hpp
runtime/inference/: stage.cpp  stage.hpp  stage_test.cpp
runtime/patches/: apply-llama-cpp-patches.sh  llama_cpp_stage_range.patch
runtime/pipeline_parallel/: generation_runner.cpp  generation_runner.hpp  generation_runner_test.cpp  layer_executor.cpp  layer_executor.hpp  llama_cpp_full_model_executor.cpp  llama_cpp_full_model_executor.hpp  llama_cpp_stage_executor.cpp  llama_cpp_stage_executor.hpp  stage_assignment.cpp  stage_assignment.hpp  stage_result.hpp  stage_worker.cpp  stage_worker.hpp  synthetic_activation_executor.cpp  synthetic_activation_executor.hpp
runtime/protocol/: activation.cpp  activation.hpp  execution_mode.cpp  execution_mode.hpp  generation.cpp  generation.hpp  stage.cpp  stage.hpp  stage_control.cpp  stage_control.hpp
runtime/transport/: http_stage_client.cpp  http_stage_client.hpp  media_type.cpp  media_type.hpp  media_type_test.cpp
runtime/worker/: config.cpp  config.hpp  main.cpp
scripts/: bench-desktop-chat.sh  build-runtime.sh  build.ps1  build.sh  check-jetson-node.sh  deploy-agent.sh  download-model-artifact.sh  download-p0-desktop-model.sh  install-node-layout.sh  poc-dopey-smoke.sh  run-agent.ps1  run-agent.sh  run-control.ps1  run-control.sh  run-desktop-agents.sh  run-local-llama.sh  run-runtime-stub.sh  smoke-node.sh  stop-desktop-agents.sh
tests/: test_imports.py
(+42 files in other folders)
